--- a/Description
+++ b/Description
@@ -1,7 +1,7 @@
 Package: BatWing
 Version: 1.0.0
 Date: 2016-06-10
-Title: Bat Wing Area and Dynamic Measures
+Title: Lifting Surface Area and Dynamic Measures for a Bat wing
 Author: Omar Daniel Leon-Alvarado
 Maintainer: Omar Daniel Leon-Alvarado <leon.alvarado12@gmail.com>
 Description: These functions calculate the wing area (LSA) and its dynamics measures (Aspect Ratio, Wing Loading, Relative Wing Loading and Minimum Power Speed).
